acvm-repo/msgpack_tagged/tests/compile_fail/via_with_reserved.stderr
error: `#[tagged(via(...))]` is incompatible with `reserved(...)` — the reserved-tag list belongs on the wire DTO, not on the public type
  --> tests/compile_fail/via_with_reserved.rs:14:1
   |
14 | / #[tagged(via(Wire), reserved(2, 5))] // reserved doesn't belong here
15 | | struct Public {}
   | |________________^
